update comments
