# api/controllers/routes.go
@@ -33,6 +33,7 @@ func (s *Server) initializeRoutes() {
 	//Comment routes
 	s.Router.HandleFunc("/api/comments", middlewares.SetMiddlewareJSON(s.CreateComment)).Methods("POST")
 	s.Router.HandleFunc("/api/comments/{postId}", middlewares.SetMiddlewareJSON(s.GetComments)).Methods("GET")
+	s.Router.HandleFunc("/api/comments/{id}", middlewares.SetMiddlewareJSON(middlewares.SetMiddlewareAuthentication(s.UpdateComment))).Methods("PUT")
 	s.Router.HandleFunc("/api/comments/{id}", middlewares.SetMiddlewareAuthentication(s.DeleteComment)).Methods("DELETE")
 
 	// Swagger
